--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.21.11",
 		"chart.js": "^4.4.0",
 		"chartist": "^1.3.0",
 		"flowbite-svelte": "^0.46.13",
