--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"bits-ui": "^0.21.11",
 		"chart.js": "^4.4.0",
 		"chartist": "^1.3.0",
+		"lucide-svelte": "^0.412.0",
 		"nanoid": "^5.0.2"
 	}
 }
