--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -25,7 +24,7 @@
 		"postcss": "^8.4.29",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
+		"svelte": "^4.2.19",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
@@ -36,7 +35,7 @@
 	"dependencies": {
 		"bits-ui": "^0.21.11",
 		"chart.js": "^4.4.0",
-		"chartist": "^1.3.0",
+		"html2canvas": "^1.4.1",
 		"lucide-svelte": "^0.412.0",
 		"nanoid": "^5.0.2"
 	}
