--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.15",
+		"drizzle-kit": "^0.25.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -35,8 +36,10 @@
 	"dependencies": {
 		"bits-ui": "^0.21.11",
 		"chart.js": "^4.4.0",
+		"drizzle-orm": "^0.34.1",
 		"html2canvas": "^1.4.1",
 		"lucide-svelte": "^0.412.0",
-		"nanoid": "^5.0.2"
+		"nanoid": "^5.0.2",
+		"zod": "^3.23.8"
 	}
 }
