--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"bcrypt": "^5.1.1",
+		"bits-ui": "^0.21.16",
 		"chart.js": "^4.4.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.34.1",
