--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/pg": "^8.11.10",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -22,20 +22,21 @@
 		"drizzle-kit": "^0.25.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
+		"eslint-plugin-svelte": "^2.45.1",
 		"postcss": "^8.4.29",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.4.3",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.2.6",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.0"
+		"typescript": "^5.5.0",
+		"vite": "^5.4.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/uuid": "^10.0.0",
 		"bcrypt": "^5.1.1",
 		"bits-ui": "^0.21.16",
 		"chart.js": "^4.4.0",
@@ -45,6 +46,7 @@
 		"lucide-svelte": "^0.412.0",
 		"nanoid": "^5.0.2",
 		"pg": "^8.13.0",
+		"uuid": "^10.0.0",
 		"zod": "^3.23.8"
 	}
 }
