--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@types/pg": "^8.11.10",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.15",
@@ -28,7 +27,10 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.3.3",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.4.1",
 		"typescript": "^5.5.0",
 		"vite": "^5.4.4"
@@ -40,12 +42,11 @@
 		"bcrypt": "^5.1.1",
 		"bits-ui": "^0.21.16",
 		"chart.js": "^4.4.0",
-		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.34.1",
 		"html2canvas": "^1.4.1",
 		"lucide-svelte": "^0.412.0",
 		"nanoid": "^5.0.2",
-		"pg": "^8.13.0",
+		"postgres": "^3.4.5",
 		"uuid": "^10.0.0",
 		"zod": "^3.23.8"
 	}
