--- a/components.json
+++ b/components.json
@@ -1,10 +1,10 @@
 {
 	"$schema": "https://next.shadcn-svelte.com/schema.json",
-	"style": "default",
+	"style": "new-york",
 	"tailwind": {
 		"config": "tailwind.config.js",
 		"css": "src/app.css",
-		"baseColor": "slate"
+		"baseColor": "gray"
 	},
 	"aliases": {
 		"components": "$lib/components",
