--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.15",
-		"bits-ui": "^1.0.0-next.80",
+		"bits-ui": "^1.1.0",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.25.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.45.1",
@@ -41,7 +40,6 @@
 	"type": "module",
 	"dependencies": {
 		"@types/uuid": "^10.0.0",
-		"bcrypt": "^5.1.1",
 		"chart.js": "^4.4.0",
 		"nanoid": "^5.0.2",
 		"uuid": "^10.0.0",
