--- a/components.json
+++ b/components.json
@@ -1,17 +1,16 @@
 {
-	"$schema": "https://next.shadcn-svelte.com/schema.json",
-	"style": "new-york",
+	"$schema": "https://shadcn-svelte.com/schema.json",
 	"tailwind": {
-		"config": "tailwind.config.js",
 		"css": "src/app.css",
-		"baseColor": "gray"
+		"baseColor": "slate"
 	},
 	"aliases": {
 		"components": "$lib/components",
 		"utils": "$lib/utils/tailwind",
-		"ui": "$lib/components/ui",
-		"hooks": "$lib/hooks"
+		"ui": "$ui",
+		"hooks": "$lib/hooks",
+		"lib": "$lib"
 	},
 	"typescript": true,
-	"registry": "https://next.shadcn-svelte.com/registry"
+	"registry": "https://shadcn-svelte.com/registry"
 }
